--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="section-one">
-            <h3 class="section-one__name">Vijaylekshmi P</h3>
+            <h3 class="section-one__name">Vijayalekshmi P</h3>
             <h2 class="section-one__role">Web Developer</h2>
             <p class="section-one__role">Email : vg111viji@gmail.com</p>
             <p class="section-one__role">Contact No : 9150104744</p>
