--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </div>
     <div class="section-four">
-        <h2 class="section-four__tile">My Projects</h2>
+        <h2 class="section-four__title">My Projects</h2>
         <ul class="section-four__desc">
             <li>
                 <h1><a href="https://actodo-project.vercel.app/">Actodo Project</a></h1>
